Added in the share feature, so we can share honey pet images everywhere

--- a/xpets/project.properties
+++ b/xpets/project.properties
@@ -13,6 +13,6 @@
 # Project target.
 target=android-17
 android.library=false
-android.library.reference.3=../library
-android.library.reference.1=../asynchttp
-android.library.reference.2=../pulltorefresh
+android.library.reference.3=..\\library
+android.library.reference.1=..\\asynchttp
+android.library.reference.2=..\\pulltorefresh
