--- a/xpets/AndroidManifest.xml
+++ b/xpets/AndroidManifest.xml
@@ -5,7 +5,7 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="11"
+        android:minSdkVersion="14"
         android:targetSdkVersion="17" />
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -23,11 +23,13 @@
             android:theme="@style/PhotoGridLayout" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name="com.emacs.xpets.ImageDetailsActivity"
+            android:theme="@style/AppTheme.FullScreen"
             android:configChanges="orientation" >
         </activity>
         <activity
